--- a/sass/modules/_catSearch.scss
+++ b/sass/modules/_catSearch.scss
@@ -75,6 +75,7 @@ body {
                 right: 64px;
                 top: 50px;
                 cursor: pointer;
+                font-weight: 400;
             }
             .fa-angle-down {
                 padding-left: 5px;
@@ -134,8 +135,9 @@ body {
                 }
             }
             .selectTitle {
-                font-size: $font-size-base;
+                font-size: $font-size-large;
                 vertical-align: middle;
+                font-weight: 400;
             }
             .toMiddle:before {
                 content: '';
