--- a/sass/respond/_catSearchMedium.scss
+++ b/sass/respond/_catSearchMedium.scss
@@ -7,7 +7,8 @@
                 margin: 0;
                 .container1 {
                     #sortCat {
-                        left: 130px;
+                        left: 134px;
+                        padding: 2px 6px;
                     }
                     #quickViewArea {
                         height: 540px;
@@ -15,7 +16,7 @@
                     }
                     .selectForm {
                         .advanceSearch {
-                            right: 14%
+                            right: 14%;
                         }
                     }
                     .catPic {
