--- a/sass/respond/_catSearchSmall.scss
+++ b/sass/respond/_catSearchSmall.scss
@@ -26,10 +26,11 @@
                     }
                 }
                 .advanceSearch {
-                    right: 5%
+                    right: 5%;
+                    font-size: $font-size-h4;
                 }
                 #advanced:checked~div {
-                    height: 500px;
+                    height: 640px;
                 }
                 .advanceSearchItem {
                     padding-left: 20px;
@@ -37,10 +38,13 @@
                     .selectTitle {
                         display: block;
                         margin-top: 20px;
+                        font-size: $font-size-large;
+                        margin-bottom: 10px;
                     }
                     .condition {
-                        padding: 3px 8px;
+                        padding: 8px 14px;
                         margin: 4px 2px;
+                        font-size: $font-size-h5;
                     }
                     .forRWD {
                         display: block;
@@ -59,6 +63,8 @@
                     .catContent,
                     figure {
                         display: inline-block;
+                    }
+                    figure{
                         padding-top: 10px;
                     }
                 }
