會員專區 連結判斷

--- a/sass/respond/_indexMedium.scss
+++ b/sass/respond/_indexMedium.scss
@@ -16,6 +16,7 @@
         .findBox {
             display: block;
             text-align: center;
+            margin-bottom: 30px;
         }
     }
     .search {
