--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -491,7 +491,7 @@
 
 
 footer {
-    height: 15vh;
+    // height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
