--- a/sass/modules/_halfway_house_detail.scss
+++ b/sass/modules/_halfway_house_detail.scss
@@ -120,6 +120,7 @@
                 box-shadow: 12px 10px 20px -10px #333;
                 img {
                     width: 100%;
+                    vertical-align: top;
                     &:hover {
                         cursor: pointer;
                     }
